HHRoutingWebservice Works now according to the description of the HowTo

--- a/HHRoutingWebservice/WebContent/WEB-INF/routerFactory.properties
+++ b/HHRoutingWebservice/WebContent/WEB-INF/routerFactory.properties
@@ -1,11 +1,12 @@
 #Algorithm to use
 algorithm=hh
 
-#Highway Hierarchies
+#Highway Hierarchies 
+#adjust to your settings
 hh.input.db.host=localhost
 hh.input.db.port=5432
-hh.input.db.name=osm_base
+hh.input.db.name=frankGC
 hh.input.db.user=osm
 hh.input.db.pass=osm
-hh.file=C:/uni/bremen_car.hh
+hh.file=/media/sda6/Uni/8.Semester/Ba-Arbeit/projects/mapsforge_dev/data/binary/berlin.hh
 #hh.file=C:/uni/germany_car.hh
