--- a/HHRoutingWebservice/WebContent/WEB-INF/routerSettings.properties
+++ b/HHRoutingWebservice/WebContent/WEB-INF/routerSettings.properties
@@ -1,6 +1,8 @@
 #Algorithm to use
 algorithm=hh
-hh.file=C:/uni/berlin_car.hh
+
+#adjust to your needs
+hh.file=/media/sda6/Uni/8.Semester/Ba-Arbeit/projects/mapsforge_dev/data/binary/berlin.hh
 
 #hh.file=C:/uni/bremen_car.hh
 #hh.file=C:/uni/germany_car.hh
